--- a/stable/elastic-stack/requirements.yaml
+++ b/stable/elastic-stack/requirements.yaml
@@ -1,23 +1,26 @@
 dependencies:
 - name: elasticsearch
   version: ^1.10.0
-  repository: https://github.com/akinolasupo/charts.git
+  repository: http://127.0.0.1:8080
 - name: kibana
-  version: ^0.16.0
-  repository: https://github.com/akinolasupo/charts.git
+  version: 1.0.0
+  repository: http://127.0.0.1:8080
 - name: kafka
   version: ^0.13.2
-  repository: https://github.com/akinolasupo/charts.git
+  repository: http://127.0.0.1:8080
   condition: kafka.enabled
-- name: nginx-ldapauth-proxy
-  version: ^0.1.0
-  repository: https://github.com/akinolasupo/charts.git
-  condition: nginx-ldapauth-proxy.enabled
-- name: elasticsearch-curator
-  version: ^1.0.0
-  repository: https://github.com/akinolasupo/charts.git
-  condition: elasticsearch-curator.enabled
-- name: elasticsearch-exporter
-  version: ^0.4.0
-  repository: https://github.com/akinolasupo/charts.git
-  condition: elasticsearch-exporter.enabled
+- name: logstash
+  version: ^1.3.0
+  repository: http://127.0.0.1:8080
+#- name: nginx-ldapauth-proxy
+#  version: ^0.1.0
+#  repository: http://127.0.0.1:8080
+#  condition: nginx-ldapauth-proxy.enabled
+#- name: elasticsearch-curator
+# version: ^1.0.0
+#  repository: http://127.0.0.1:8080
+#  condition: elasticsearch-curator.enabled
+#- name: elasticsearch-exporter
+#  version: ^0.4.0
+#  repository: http://127.0.0.1:8080
+#  condition: elasticsearch-exporter.enabled
